# chatapp-qt6

./: .gitignore  ApiClient.h  CMakeLists.txt  README.md  WebSocketClient.h  bun.lockb  index.ts  main.cpp  mainwindow.cpp  mainwindow.h  package.json  router.ts  server.ts  tsconfig.json
chat_client/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
chat_server/: CMakeLists.txt  main.cpp
client/: CMakeLists.txt  main.cpp  mainwindow.h
prisma/: schema.prisma
prisma/migrations/20240105224810_init/: migration.sql
server/: CMakeLists.txt
server/api/: ping.get.ts
server/api/room/: create.post.ts  history.get.ts  join.post.ts  leave.post.ts  list.get.ts
server/middleware/: id.ts
src/: index.ts  router.ts  server.ts
src/server/: websocket.ts
src/server/api/: ping.get.ts
src/server/api/features/: hello_world.ts
src/server/api/features/[test1]/: [test2].get.ts
src/server/api/room/: leave.post.ts  list.get.ts
src/server/api/room/create/: [name].post.ts
src/server/api/room/history/: [name].get.ts
src/server/api/room/join/: [name].post.ts
src/server/middleware/: id.ts
src/utils/: type.ts
